# 4dvideo

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
android_src/FourDVideoGrabber/app/: proguard-rules.pro
android_src/FourDVideoGrabber/app/src/main/res/layout/: activity_main.xml
android_src/FourDVideoGrabber/app/src/main/res/values/: strings.xml
android_src/ThreeDVideoGrabber/app/: build.gradle
android_src/ThreeDVideoGrabber/app/src/main/: AndroidManifest.xml
android_src/ThreeDVideoGrabber/app/src/main/res/layout/: activity_main.xml
misc/: dataset_settings.txt  ffmpeg_cmd.txt
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/src/: 3d_video_player.cpp  4d_player_app.cpp  _test_app.cpp  animation_writer_app.cpp  dataset_visualizer_app.cpp  format_converter.cpp  format_converter_app.cpp  realsense_grabber.cpp  realsense_grabber_app.cpp  triangulation_visualizer_app.cpp
src/cmake/: util.cmake
src/cmake/modules/: FindGLFW3.cmake  FindRSSDK.cmake
src/libs/: CMakeLists.txt
src/libs/3dvideo/: CMakeLists.txt
src/libs/3dvideo/include/3dvideo/: animation_writer.hpp  app_state.hpp  data_visualizer.hpp  dataset_input.hpp  dataset_output.hpp  dataset_reader.hpp  dataset_writer.hpp  depth_filter.hpp  format.hpp  frame.hpp  grabber_visualizer.hpp  mesh_frame.hpp  mesher.hpp  params.hpp  player.hpp  sensor_manager.hpp
src/libs/3dvideo/src/: animation_writer.cpp  app_state.cpp  data_visualizer.cpp  dataset_input.cpp  dataset_output.cpp  dataset_reader.cpp  dataset_writer.cpp  depth_filter.cpp  frame.cpp  grabber_visualizer.cpp  mesher.cpp  params.cpp  player.cpp  sensor_manager.cpp
src/libs/4d/: CMakeLists.txt
src/libs/4d/include/4d/: animation_writer.hpp  app_state.hpp  data_visualizer.hpp  dataset_input.hpp  dataset_output.hpp  dataset_reader.hpp  dataset_writer.hpp  depth_filter.hpp  format.hpp  frame.hpp  mesh_frame.hpp  mesher.hpp  params.hpp  player.hpp  sensor_manager.hpp
src/libs/4d/src/: animation_writer.cpp  app_state.cpp  data_visualizer.cpp  dataset_input.cpp  dataset_output.cpp  dataset_reader.cpp  dataset_writer.cpp  depth_filter.cpp  mesher.cpp  params.cpp  player.cpp  sensor_manager.cpp
src/libs/realsense/: CMakeLists.txt
src/libs/realsense/include/realsense/: realsense_grabber.hpp
src/libs/realsense/src/: realsense_grabber.cpp
src/libs/tri/: CMakeLists.txt
src/libs/tri/include/tri/: triangulation.hpp
src/libs/tri/src/: triangulation.cpp
src/libs/util/: CMakeLists.txt
src/libs/util/include/util/: camera.hpp  cancellation_token.hpp  concurrent_queue.hpp  consumer.hpp  filesystem_utils.hpp  geometry.hpp  io_3d.hpp  macro.hpp  opengl_utils.hpp  producer.hpp  tiny_logger.hpp  tiny_profiler.hpp  util.hpp
src/libs/util/src/: filesystem_utils.cpp  geometry.cpp  io_3d.cpp  opengl_utils.cpp  string_utils.cpp  test_utils.cpp  tiny_logger.cpp  tiny_profiler.cpp
src/test/: CMakeLists.txt
src/test/src/: binary_dataset_tests.cpp  geometry_tests.cpp  io_3d_tests.cpp  logger_tests.cpp  producer_consumer_tests.cpp  tri_tests.cpp
(+4 files in other folders)
